--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= render 'layouts/errors' %>
+  <%= render 'layouts/header' %>
 
-<%= yield %>
-
+  <%= yield %>
+  <%= debug(params) %>
 </body>
 </html>
