--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,6 @@
 <%= link_to 'Home', root_path %>
 <% if user_signed_in? %>
+  <%= link_to 'Users', users_path %>
   <%= link_to 'Profile', current_user %>
   <%= link_to 'Settings', edit_user_registration_path %>
   <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
