--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,4 @@
 <%= render 'shared/user_info' %>
+<%= render 'shared/stats' %>
 <%= render 'shared/feed'%>
+<%= render 'follow_form' if user_signed_in? %>
