--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,5 @@
 <li>
   <%= link_to post.user.email, post.user %>
-  <%= post.content %>
+  <%= link_to post.content, post_path(post) %>
   Posted <%= time_ago_in_words(post.created_at) %> ago.
 </li>
