--- a/app/views/users/_follow_form.html.erb
+++ b/app/views/users/_follow_form.html.erb
@@ -1,5 +1,8 @@
+<% unless @user == current_user %>
   <% if current_user.following?(@user) %>
     <%= render 'unfollow' %>
   <% else %>
-    <%= render 'follow' %>
+    <%= render 'friend_request' %>
+    <%= render 'follow' %> 
   <% end %>
+<% end %>
