--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,15 @@
-<h1><%= @post.user.email %></h1>
-<%= @post.content %>
+<h2><%= @post.content %></h2>
+<%= link_to @post.user.email, @post.user %>
 
+<% if liking? %>
+  <%= render 'likings/unlike_form' %>
+<% else %>
+  <%= render 'likings/like_form' %>
+<% end %>
+
+
+Likes: <%= @post.likings.count %>
 <%= render 'shared/comments_form' %>
 
-<h1>Comments</h1>
-<%= @feed_items %>
+<h1>Comments(<%= @post.comments.count %>)</h1>
+<%= render 'shared/feed' %>
