--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,12 @@
 <li>
   <%= link_to post.user.email, post.user %>
   <%= link_to post.content, post_path(post) %>
+
   Posted <%= time_ago_in_words(post.created_at) %> ago.
+  <% if current_user.id == post.user.id %>
+    <%= link_to "Edit", edit_post_path(post) %>
+    <%= link_to "Delete", post, method: :delete,
+                                data: { confirm: "You sure?" } %>
+  <% end %>
 
 </li>
