--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,5 +8,5 @@
 <% else %>
   <h1>Welcome to odin-facebook</h1>
   <%= link_to 'Sign up', new_user_registration_path %>
-  <%= link_to 'Sign in with Facebook', user_omniauth_authorize_path(:facebook) %>
+  <%= link_to 'Sign in with Facebook', user_facebook_omniauth_authorize_path %>
 <% end %>
