--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,45 @@
-<%= link_to 'Home', root_path %>
-<% if user_signed_in? %>
-  <%= link_to 'Users', users_path %>
-  <%= link_to 'Profile', current_user %>
-  <%= link_to 'Settings', edit_user_registration_path %>
-  <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
-  Signed in as: <%= current_user.email %>
-<% else %>
 
-  <%= link_to 'Sign in', new_user_session_path %>
-<% end %>
+<nav class="navbar navbar-default navbar-static-top">
+  <div class="container-fluid">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">OBOOK</a>
+      </div>
 
-<%= link_to 'About', about_path %>
+      <div class="collapse navbar-collapse" id="navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active">
+            <%= link_to 'Home', root_path %>
+          </li>
+          <% if user_signed_in? %>
+            <li><%= link_to 'Users', users_path %></li>
+
+            <li class="dropdown">
+              <%= link_to 'Settings ', edit_user_registration_path, class: "dropdown-toggle", data: {toggle: "dropdown"}  %>
+              <ul class="dropdown-menu">
+                <li><%= link_to 'Profile', current_user %></li>
+                <li class="divider"></li>
+                <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
+              </ul>
+            </li>
+
+          </ul>
+            <p class="navbar-text navbar-right">Signed in as: <%= link_to current_user.email, current_user %></p>
+          <% else %>
+            <ul class="nav navbar-nav">
+              <li><%= link_to 'Sign in', new_user_session_path %></li>
+            </ul>
+          <% end %>
+            <ul class="nav navbar-nav">
+              <li><%= link_to 'About', about_path %></li>
+            </ul>
+
+      </div>
+    </div>
+  </div>
+</nav>
