--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Playfair+Display|Raleway|VT323|Contrail+One" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Playfair+Display|Raleway|VT323|Contrail+One" rel="stylesheet">
   <title><%= yield(:title) %></title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -16,10 +16,13 @@
   <%= render 'layouts/header' %>
 
   <%= yield %>
-  <%= debug(params) %>
+
+  <%= render 'layouts/footer' %>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
+<!-- github buttons -->
+<script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 </html>
