--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,55 @@
-<h1>About us</h1>
-<p>This is a sample app designed for training purposes only.
-   It is a clone of Facebook.
-</p>
+
+<div class="jumbotron background-tint about-us">
+  <div class="container">
+    <div class="col-md-8">
+      <h1>About us</h1>
+      <p>This is a sample app designed for training purposes only.  It showcases my skill in Ruby and Rails, Bootstrap as well as HTML5 and CSS3.
+      </p>
+   </div>
+   </div>
+   </div>
+   <div class="container">
+   <div class="row">
+     <div class="col-md-8">
+       <h1>Overview</h1>
+       <hr>
+       <p>Ruby on Rails was used to build the entire site including all of its minimal features.  Here you will find basic CRUD actions on display including the ability to build posts, authentication , comment.
+       </p>
+       <p>
+       Bootstrap is used to style all of the various elements on the page.
+       </p>
+     </div>
+  
+
+     <div class="col-md-2">
+
+         <ul class="vertical-nav">
+           <li><%= link_to 'Ruby on Rails' %></li>
+           <li><%= link_to 'Ruby on Rails' %></li>
+           <li><%= link_to 'Ruby on Rails' %></li>
+           <li><%= link_to 'Ruby on Rails' %></li>
+           <li><%= link_to 'Ruby on Rails' %></li>
+           <li><%= link_to 'Ruby on Rails' %></li>
+           <li><%= link_to 'Ruby on Rails' %></li>
+           <li><%= link_to 'Ruby on Rails' %></li>
+           <li><%= link_to 'Ruby on Rails' %></li>
+           <li><%= link_to 'Ruby on Rails' %></li>
+           <li><%= link_to 'Ruby on Rails' %></li>
+           <li><%= link_to 'Ruby on Rails' %></li>
+         </ul>
+        <!-- <div class="side-nav">
+         <div class="list-group">
+           <a href="#" class="list-group-item">shine</a>
+           <a href="#" class="list-group-item">shine</a>
+           <a href="#" class="list-group-item">shine</a>
+           <a href="#" class="list-group-item">shine</a>
+           <a href="#" class="list-group-item">shine</a>
+           <a href="#" class="list-group-item">shine</a>
+           </div>
+         </div> -->
+
+       </div>
+     </div>
+     </div>
+   </div>
+ </div>
