--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Playfair+Display|Raleway|VT323|Contrail+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Playfair+Display|Raleway|VT323|Contrail+One|Roboto|Oxygen" rel="stylesheet">
   <title><%= yield(:title) %></title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
