--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,7 @@
 
 <div class="jumbotron background-tint about-us">
   <div class="container">
-    <div class="col-md-8">
+    <div class="col-md-8 headline">
       <h1>About us</h1>
       <p>This is a sample app designed for training purposes only.  It showcases my skill in Ruby and Rails, Bootstrap as well as HTML5 and CSS3.
       </p>
@@ -10,20 +10,20 @@
    </div>
    <div class="container">
    <div class="row">
-     <div class="col-md-8">
+     <div class="col-md-8 col-xs-12">
        <h1>Overview</h1>
        <hr>
-       <p>Ruby on Rails was used to build the entire site including all of its minimal features.  Here you will find basic CRUD actions on display including the ability to build posts, authentication , comment.
+       <p><strong>Ruby on Rails</strong> was used to build the entire site using <abbr title="Model View Controller" class="initialism">MVC</abbr> methodolagies.  Here you will find basic <abbr title="Create Read Update Destroy" class="initialism">CRUD</abbr> actions on display including the ability to build posts, authentication , comment.
        </p>
        <p>
-       Bootstrap is used to style all of the various elements on the page.
+       <strong>Bootstrap</strong> is used to style all of the various elements on the page.
        </p>
      </div>
-  
+
 
      <div class="col-md-2">
 
-         <ul class="vertical-nav">
+         <ul class="vertical-nav ">
            <li><%= link_to 'Ruby on Rails' %></li>
            <li><%= link_to 'Ruby on Rails' %></li>
            <li><%= link_to 'Ruby on Rails' %></li>
