--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -18,6 +18,7 @@
 
     <div class="row">
       <div class="footer-nav">
+        <div class="container-fluid">
         <p>
           Currently v1.0.0 -
           <%= link_to 'Github' %> -
@@ -25,6 +26,7 @@
           <%= link_to 'Issues' %> -
           <%= link_to 'Releases' %>
         </p>
+      </div>
       </div>
     </div>
 
