--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,9 @@
             <%= link_to 'Home', root_path %>
           </li>
           <% if user_signed_in? %>
-            <li><%= link_to 'Users', users_path %></li>
+            <li>
+              <%= link_to 'Users', users_path %>
+            </li>
 
             <li class="dropdown">
               <%= link_to 'Settings ', edit_user_registration_path, class: "dropdown-toggle", data: {toggle: "dropdown"}  %>
@@ -31,13 +33,10 @@
           </ul>
             <p class="navbar-text navbar-right">Signed in as: <%= link_to current_user.email, current_user %></p>
           <% else %>
-            <ul class="nav navbar-nav">
               <li><%= link_to 'Sign in', new_user_session_path %></li>
-            </ul>
           <% end %>
-            <ul class="nav navbar-nav">
               <li><%= link_to 'About', about_path %></li>
-            </ul>
+
 
       </div>
     </div>
