--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
 
-<div class="jumbotron background-tint about-us">
+<div class="jumbotron background-tint">
   <div class="container">
     <div class="col-md-8 headline">
       <h1>About us</h1>
