--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,31 +1,36 @@
-<h2>Sign up</h2>
+<div class="jumbotron text-center background-tint user-form">
+  <div class="container-fluid">
+<h1>Sign up</h1>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
 
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+  <div class="field form-input">
+    <%= f.hidden_field :email %>
+    <%= f.email_field :email, autofocus: true, placeholder: "Email"%>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
+   <br />
+  <div class="field form-input">
+    <%= f.hidden_field :password %>
+    <%= f.password_field :password, autocomplete: "off", placeholder: "Password"%>
+    <br>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  <div class="field form-input">
+    <%= f.hidden_field :password_confirmation %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Confirm your password" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="actions form-input">
+    <%= f.submit "Sign up", class: "btn btn-default btn-md"%>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+</div>
