--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -22,7 +22,7 @@
         <p>
           Currently v1.0.0 -
           <%= link_to 'Github' %> -
-          <%= link_to 'About' %> -
+          <%= link_to 'About', about_path %> -
           <%= link_to 'Issues' %> -
           <%= link_to 'Releases' %>
         </p>
