--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,12 +1,27 @@
-<li>
-  <%= link_to post.user.email, post.user %>
+
+<div class="col-md-6">
+  <div class="thumbnail">
+    <div class="container post">
+   <li>
+
+  <p><%= link_to post.user.email, post.user %></p>
+  <p>Posted <%= time_ago_in_words(post.created_at) %> ago.</p>
   <%= link_to post.content, post_path(post) %>
 
-  Posted <%= time_ago_in_words(post.created_at) %> ago.
   <% if current_user.id == post.user.id %>
-    <%= link_to "Edit", edit_post_path(post) %>
+    <p>
+      <%= link_to "Edit", edit_post_path(post), class: "btn btn-default"%>
+
+
     <%= link_to "Delete", post, method: :delete,
-                                data: { confirm: "You sure?" } %>
+                                data: { confirm: "You sure?" }, class: "btn btn-default" %>
+
+    </p>
+
   <% end %>
 
 </li>
+
+</div>
+</div>
+</div>
