--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,4 +1,9 @@
+
+
+
 <% if @feed_items.any? %>
   <%= render @feed_items %>
-  <%= will_paginate @feed_items %>
+  <div class="">
+    <%= will_paginate @feed_items %>
+  </div>
 <% end %>
