--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,4 +1,7 @@
-<% provide(:title, @user.email) %>
 
+
+<% provide(:title, @user.email) %>
 <h1><%= @user.email %></h1>
+<div class="round">
 <%= gravatar_for(@user) %>
+</div>
