--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,11 +13,11 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li>
+          <li class="<%= active_link(root_path) %>">
             <%= link_to 'Home', root_path %>
           </li>
           <% if user_signed_in? %>
-            <li>
+            <li class="<%= active_link(users_path) %>">
               <%= link_to 'Users', users_path %>
             </li>
 
@@ -32,10 +32,7 @@
 
           </ul>
             <p class="navbar-text navbar-right">Signed in as: <%= link_to current_user.email, current_user %></p>
-
-    
           <% end %>
-
       </div>
     </div>
   </div>
