--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,6 +2,6 @@
 <div class="thumbnail col-md-4 list-unstyled text-center">
   <li>
     <%= gravatar_for(user) %>
-    <p><%= link_to user.email, user %></p>
+    <h4><%= link_to user.email, user %></h4>
   </li>
 </div>
