--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,7 +31,7 @@
             </li>
 
           </ul>
-            <p class="navbar-text navbar-right">Signed in as: <%= link_to current_user.email, current_user %></p>
+            <p class="navbar-text navbar-right">Signed in as: <%= link_to current_user.email, root_path %></p>
           <% end %>
       </div>
     </div>
